# FactoryGame

./: .gitignore  CMakeLists.txt  count.sh
src/: Util.h  main.cpp
src/Engine/: AssetManager.cpp  AssetManager.h  Common.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Engine.tpp  EntityManager.cpp  EntityManager.h  EntityManager.tpp  Graphics.cpp  Graphics.h  ISystem.h  MovingAverage.h  Object.cpp  Object.h  Object.tpp  Observable.h
src/Engine/Assets/: Asset.h  Texture.cpp  Texture.h
src/Engine/Components/: Transform.h
src/Game/: GameManager.cpp  GameManager.h  Player.cpp  Player.h  PlayerMovement.h
src/Graphics/: Animation.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Networking/: ByteStream.cpp  ByteStream.h  ClientNetworkInterface.cpp  ClientNetworkInterface.h  ConnectionManager.cpp  ConnectionManager.h  IClientConnection.cpp  IClientConnection.h  NetworkCore.cpp  NetworkCore.h  NetworkCore.tpp  NetworkObject.cpp  NetworkObject.h  NetworkObject.tpp  NetworkObjectFactory.cpp  NetworkObjectFactory.h  Packet.h  PacketManager.cpp  PacketManager.h  ServerNetworkInterface.cpp  ServerNetworkInterface.h
src/Networking/Handlers/: ClientConnectHandler.h  ClientConnectedHandler.h  ClientDisconnectHandler.h  DestroyObjectHandler.h  PlayerPositionUpdateHandler.h  SpawnObjectHandler.h
src/Networking/Packets/: ClientConnectPacket.h  ClientConnectedPacket.h  ClientDisconnectPacket.h  DestroyObjectPacket.h  NetworkObjectPacket.h  PlayerPositionUpdatePacket.h  (+1 more)
src/Server/: ClientConnection.cpp  ClientConnection.h  LocalClientConnection.cpp  LocalClientConnection.h
